--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Flower</title>
+    <title>Online Flower Shop</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Finlandica:ital,wght@1,400;1,600&family=Gentium+Book+Plus:ital@1&family=Lato:wght@300;400;700&family=Open+Sans:ital,wght@0,800;1,700&family=Roboto+Mono:ital@1&display=swap" rel="stylesheet">
